Version 0.1.0+dev
- raised minimal version of PHP to 7

Version 0.1.0
- initial version