@@ -5,6 +5,5 @@
 </head>
 <body>
 <h1>Index</h1>
-
 </body>
 </html>
